# GeoHarness

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.ko.md  README.md  main.py  populate_naver_coords.py  pyproject.toml  requirements.txt
.agents/rules/: geoharness.md
.agents/skills/auto-commit/: SKILL.md
.agents/skills/harness-quality-gate/: SKILL.md
.claude/commands/: auto-commit.md
.github/workflows/: deploy-cloud-run.yml
app/: config.py  main.py
app/routers/: transform.py
app/services/: coordinate.py  gemini.py  harness.py
app/static/: index.html
data/: google_poi_base.csv  ground_truth_with_projections.csv  ml_dataset.csv  test_coordinates.json  vworld_anchors.csv
docs/complete/: 01_completion_report.md  02_team_handoff_guide.md  03_data_strategy.md  04_ending_plan.md
docs/prd/: PRD_spatial-sync.md
docs/todo_plan/: PLAN_spatial-sync.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
src/: main.py
src/api/: local_verifier.py  search.py  server.py
src/engine/: ai.py  inference.py  metrics.py  prompt.py  transform.py
src/ml/: GeoHarness_RAPIDS_Trainer.ipynb  advanced_trainer.py  dataset_generator.py  naver_collector.py  rapids_trainer.py  vworld_collector.py
src/shared/: __init__.py  config.py  constants.py
src/static/: index.html
tests/: test_api.py  test_engine.py  test_naver_api.py  test_naver_api2.py  test_naver_api_katec.py
